--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,40 @@
 {
-  "env": {
-    "development": {
-      "presets": ["next/babel"],
-      "plugins": [
-        [
-          "styled-components",
-          {
-            "ssr": true,
-            "displayName": true
-          }
-        ]
-      ]
-    },
-    "production": {
-      "presets": ["next/babel"],
-      "plugins": [
-        [
-          "styled-components",
-          {
-            "ssr": true,
-            "displayName": true
-          }
-        ]
-      ]
-    }
-  }
+	"env": {
+		"development": {
+			"presets": ["next/babel"],
+			"plugins": [
+				[
+					"styled-components",
+					{
+						"ssr": true,
+						"displayName": true
+					}
+				]
+			]
+		},
+		"production": {
+			"presets": ["next/babel"],
+			"plugins": [
+				[
+					"styled-components",
+					{
+						"ssr": true,
+						"displayName": true
+					}
+				]
+			]
+		},
+		"test": {
+			"presets": ["next/babel"],
+			"plugins": [
+				[
+					"styled-components",
+					{
+						"ssr": true,
+						"displayName": true
+					}
+				]
+			]
+		}
+	}
 }
