--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"test": "jest --watch"
+		"test": "jest --watch",
+		"cypress": "cypress open"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"babel-core": "^6.26.3",
-		"babel-plugin-root-import": "^6.5.0",
 		"babel-plugin-styled-components": "^1.10.7",
 		"next": "^9.3.5",
 		"react": "^16.13.1",
