--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,5 @@ jobs:
             - name: E2E Tests
               uses: cypress-io/github-action@v1
               with:
-                  start: yarn start
+                  start: yarn dev
                   wait-on: 'http://localhost:3000'
