reorg api keys and secrets for github workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
               uses: cypress-io/github-action@v1
               with:
                   start: yarn dev
+                  secrets: ['SC_ID']
                   wait-on: 'http://localhost:3000'
