--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"babel-plugin-styled-components": "^1.10.7",
+		"dotenv": "^8.2.0",
 		"next": "^9.3.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
